Refactor; performance improvements
