# adapters/src/main/resources/static/openapi/openapi.yaml
@@ -216,8 +216,6 @@ components:
           type: string
           format: zone-offset
           description: The zone offset for the measured startTime and endTime of this data.
-        sleepScore:
-          type: integer
       required:
         - startTime
         - uid
@@ -539,6 +537,8 @@ components:
         date:
           type: string
           format: date
+        sleepScore:
+          type: long
         exerciseList:
           $ref: "#/components/schemas/DailySummaryActivityListDTO"
       required:
@@ -548,6 +548,7 @@ components:
         - totalBurnedCalories
         - distanceWhileActive
         - date
+        - sleepScore
         - exerciseList
 
     DailySummaryActivityListDTO:
